Cleaned up and commented the HttpRequest class